@@ -459,6 +459,7 @@ LISPSYM(tree_equal,"TREE-EQUAL",lisp)
 LISPSYM(endp,"ENDP",lisp)
 LISPSYM(list_length,"LIST-LENGTH",lisp)
 LISPSYM(list_length_dotted,"LIST-LENGTH-DOTTED",ext)
+LISPSYM(list_length_proper,"LIST-LENGTH-PROPER",ext)
 LISPSYM(nth,"NTH",lisp)
 LISPSYM(first,"FIRST",lisp)
 LISPSYM(second,"SECOND",lisp)
