@@ -577,6 +577,7 @@ LISPFUN(tree_equal,seclass_default,2,0,norest,key,2, (kw(test),kw(test_not)) )
 LISPFUNNF(endp,1)
 LISPFUNNR(list_length,1)
 LISPFUNNR(list_length_dotted,1)
+LISPFUNNR(list_length_proper,1)
 LISPFUNNR(nth,2)
 LISPFUNNR(first,1)
 LISPFUNNR(second,1)
